# grubicy

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  LICENSE  README.md  actions.py  dashboard.py  main.py  mkdocs.yml  pyproject.toml  requirements.txt  todo.txt  workflow.toml
.github/workflows/: ci.yml  docs.yml  publish.yml
configs/param-sets/: ps_0001.json  ps_0002.json
dashboard_modules/: param_set_viewer.py
docs/: api.md  cli.md  getting-started.md  index.md  migrations.md
examples/library-example/: README.md  collect_results.py  materialize_and_render.py  pipeline.toml
examples/library-example/actions/: s1.py  s2.py  s3.py
examples/sample-project/: collect_results.py  make_jobs.py  workflow.toml
examples/sample-project/actions/: s1.py  s2.py  s3.py
grubicy/: __init__.py  cli.py  collect.py  context.py  helpers.py  materialize.py  migrate.py  row_render.py  row_utils.py  spec.py
inputs/: ligands.csv
scripts/: aggregate_results.py  populate_workspace.py
scripts/migrations/: add_constant_param_to_doc.py
signac_deps/: __init__.py  cli.py  collect.py  helpers.py  materialize.py  migrate.py  row_render.py  spec.py
tests/: test_cli.py  test_collect.py  test_helper_utils.py  test_materialize_and_helpers.py  test_migrate.py  test_row_render.py  test_spec.py  test_submit.py  test_submit_integration.py
