[project]
name = "grubicy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "signac>=2.0",
    "tomli-w>=1.0",
    "msgspec>=0.18",
    "filelock>=3.14",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]
docs = [
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.25.0",
    "mkdocs-autorefs>=1.0.0",
]

[project.scripts]
grubicy = "grubicy.cli:main"

[tool.uv]
package = true
