[project]
name = "grubicy"
version = "1.0.0"
description = "Config-driven helpers for signac workflows with explicit dependencies and migrations"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Davide Crucitti" }]
keywords = ["signac", "workflow", "pipelines", "dependencies", "migrations"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "signac>=2.0",
    "tomli-w>=1.0",
    "msgspec>=0.18",
    "filelock>=3.14",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.25.0",
    "mkdocs-autorefs>=1.0.0",
    "pre-commit>=3.7",
    "ruff",
]

[project.scripts]
grubicy = "grubicy.cli:main"

[tool.uv]
package = true

[project.urls]
Homepage = "https://github.com/davide-grheco/grubicy"
Repository = "https://github.com/davide-grheco/grubicy"
Documentation = "https://davide-grheco.github.io/grubicy/"
Issues = "https://github.com/davide-grheco/grubicy/issues"

[tool.pytest.ini_options]
markers = [
    "integration: marks tests that perform integration with row/signac",
]
